fixing spacing of related-items-list__list
SRFCMSAL-1454

--- a/source/_patterns/20-molecules/related-items-list/related-items-list.scss
+++ b/source/_patterns/20-molecules/related-items-list/related-items-list.scss
@@ -26,6 +26,11 @@
 
 .related-items-list__list {
   padding: 0;
+  margin: 12px 0 24px;
+
+  @include smartphone {
+    margin: 8px 0 20px;
+  }
 }
 
 .related-items-list__item {
